--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "scss": "^0.2.4"
+    "@babel/runtime": "^7.13.10",
+    "axios": "0.21.1",
+    "bootstrap": "4.6.0",
+    "jquery": "3.6.0",
+    "popper.js": "1.16.1",
+    "react": "17.0.2",
+    "react-bootstrap": "1.5.2",
+    "react-dom": "17.0.2",
+    "scss": "0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
